--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,12 @@
+@import "contacto", "banner", "cartas";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+
 $color_1: azure;
 $color_2: black;
 $font-family_1:'Ubuntu', sans-serif;
 $background-color_1: rgb(91, 17, 141);
 $background-color_2: azure;
 $background-color_3: rgb(96, 102, 102);
-
 
 @keyframes XEROX {
 	0% {
@@ -25,22 +26,35 @@ $background-color_3: rgb(96, 102, 102);
 	margin: 0%;
 	padding: 0%;
 }
-h1 {
-	text-align: center;
-	font-size: 50px;
-	font-weight: 550;
-	padding: 20px 0px 0px 0px;
-	font-family: $font-family_1;
-	background-color: $background-color_1;
-	margin-bottom: 0px;
-	a {
-		color: $color_1;
-	}
-}
-.tituloXerox {
-	padding: 13px;
-	&:hover {
-		animation: XEROX 1s;
+body {
+	background-color: $background-color_2;
+	header {
+		font-family: $font-family_1;
+		font-weight: 600;
+		font-style: normal;
+		font-size: 18px;
+		line-height: 25px;
+		text-align: center;
+		color: $color_2;
+		background-color: $background-color_1;
+		padding: 5px;
+		display: grid;
+		h1 {
+			text-align: center;
+			font-size: 50px;
+			font-weight: 550;
+			padding: 20px 0px 0px 0px;
+			font-family: $font-family_1;
+			background-color: $background-color_1;
+			margin-bottom: 0px;
+			a {
+				color: $color_1;
+				padding: 13px;
+				&:hover {
+					animation: XEROX 1s;
+				}
+			}
+		}
 	}
 }
 h2 {
@@ -58,46 +72,45 @@ h4 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
+h5 {
+	color: azure;
+}
+p{
+	font-size: 50px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	color: azure;
+	text-shadow: 5ch ;
+}
 a {
 	list-style-type: none;
 	text-decoration: none;
 }
-header {
-	font-family: $font-family_1;
-	font-weight: 600;
-	font-style: normal;
-	font-size: 18px;
-	line-height: 25px;
-	text-align: center;
-	color: $color_2;
-	background-color: $background-color_1;
-	padding: 5px;
-	display: grid;
-}
-.xeroxNav {
-	font-family: $font-family_1;
-	font-weight: 600;
-	font-style: normal;
-	font-size: 19px;
-	line-height: 25px;
-	background-color: $background-color_1;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	margin-bottom: 0px;
-	align-items: center;
-}
-.xeroxLista {
-	display: inline-block;
-	list-style: none;
-	padding: 10px;
-	text-decoration: none;
-	transition-property: all;
-	transition-duration: 95ms;
-	letter-spacing: 1px;
-	width: 160px;
-	&:hover {
-		transform: scale(1.5);
+nav.row{
+	ul {
+		font-family: $font-family_1;
+		font-weight: 600;
+		font-style: normal;
+		font-size: 19px;
+		line-height: 25px;
+		background-color: $background-color_1;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		margin-bottom: 0px;
+		align-items: center;
+		.xeroxLista {
+			display: inline-block;
+			list-style: none;
+			padding: 10px 0px 10px 0px;
+			text-decoration: none;
+			transition-property: all;
+			transition-duration: 95ms;
+			letter-spacing: 1px;
+			width: 155px;
+			&:hover {
+				transform: scale(1.5);
+			}
+		}
 	}
 }
 .divInicio {
@@ -135,9 +148,6 @@ header {
 	&:hover {
 		transform: scale(1.4);
 	}
-}
-body {
-	background-color: $background-color_2;
 }
 .breadcrumb {
 	margin: 20px 0px 0px 20px;
@@ -183,25 +193,9 @@ ul {
 	justify-content: space-evenly;
 	box-sizing: content-box;
 }
-.imagenLista {
-	margin: 30px 30px 30px 30px;
-	display: inline-block;
-	font-family: $font-family_1;
-	font-weight: 600;
-	text-align: center;
-	font-size: 14px;
-	display: grid;
-	justify-items: center;
-	text-transform: uppercase;
-	justify-content: center;
-}
-.imagenCartas {
-	height: 250px;
-	width: 250px;
-}
 footer {
 	font-family: $font-family_1;
-	margin-top: 110px;
+	margin-top: 60px;
 	padding: 30px;
 	color: $color_1;
 	background-color: $background-color_3;
@@ -228,103 +222,31 @@ section {
 		}
 	}
 }
-.contactoMain {
-	display: grid;
-}
-.contactoNav {
-	margin: 30px 0px 0px 150px;
-	padding: 20px 20px 20px 0px;
-	font-family: $font-family_1;
-	font-weight: 550;
-	grid-area: ul;
-}
-.contactoComentario {
-	margin: 0px 0px 15px 0px;
-	display: grid;
-	grid-template-rows: 38px 5px;
-	grid-template-columns: 270px;
-}
-.contactoInfo {
-	margin: 30px 0px 0px 500px;
-	border: 0ch;
-	display: grid;
-	font-family: $font-family_1;
-	font-weight: 550;
-}
-.contactoDiv {
-	margin: 20px 0px 20px 0px;
-	display: grid;
-	align-items: start;
-	grid-template-columns: 1fr;
-	width: 600px;
-	grid-template-areas: "ul form";
-	box-sizing: border-box;
-}
-div {
-	ul {
-		li {
-			a {
-				color: $color_2;
-			}
-			img {
-				width: 25px;
-			}
-		}
+@media screen and (min-width: 0px) and (max-width:1535px) {
+	fieldset {
+		margin: 30px 0px 0px 200px;
 	}
 }
-.comentarioDisplay {
-	display: flex;
+@media screen and (min-width: 0px) and (max-width:1300px) {
+	main {
+		justify-items: center;
+		div.contactoDiv {
+			grid-template-columns: 60vw;
+			grid-template-rows: auto;
+			grid-template-areas: "ul" "form";
+			ul {
+				margin: 30px 0px 0px 50px;
+				padding: 0px 0px 0px 120px;
+			}
+		}
+        form{
+            fieldset{
+                margin: 30px 0px 0px 150px;
+            }
+        }
+	}
 }
-.enviar {
-	display: flex;
-}
-.banner{
-	padding: 4rem 0rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    gap: 10px;
-    background-image:linear-gradient(
-        rgba(5, 7, 12, 0.5),
-        rgba(5, 7, 12, 0.5)),
-        url(../img/marvel-banner.png);
-    background-position: 50% 50%;
-    background-size: cover;
-    background-attachment: fixed;
-    margin-bottom: 4rem;
-}
-.banner1{
-	@extend .banner;
-	background-image:linear-gradient(
-        rgba(5, 7, 12, 0.5),
-        rgba(5, 7, 12, 0.5)),
-        url(../img/5265-SeriesHeaders_OP_2000x800_wm.jpg);
-	background-size: auto
-}
-.banner2{
-	@extend .banner;
-	background-image:linear-gradient(
-        rgba(5, 7, 12, 0.5),
-        rgba(5, 7, 12, 0.5)),
-        url(../img/0568794.webp);
-	background-size: auto;
-	background-position: 0% 30%
-}
-.banner3{
-	@extend .banner;
-	background-image:linear-gradient(
-        rgba(5, 7, 12, 0.5),
-        rgba(5, 7, 12, 0.5)),
-        url(../img/YuGiOh.jpg);
-}
-p{
-	font-size: 50px;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	color: azure;
-}
-@media screen and (min-width:0px) and (max-width:768px) {
+@media screen and (min-width:0px) and (max-width:822px) {
 	h2 {
 		margin-top: 20px;
 		padding: 10px 0px 0px 0px;
@@ -339,9 +261,12 @@ p{
 	}
 	.carousel{
 		margin: 0px 50px 0px 50px;
+	}	
+	p{
+		font-size: 30px;
 	}
 }
-@media screen and (min-width:768px) {
+@media screen and (min-width:823px) {
 	.divInicio {
 		display: none;
 	}
@@ -349,37 +274,25 @@ p{
 		display: none;
 	}
 }
-@media screen and (min-width: 0px) and (max-width:1300px) {
-	.contactoMain {
-		justify-items: center;
-	}
-	.contactoDiv {
-		grid-template-columns: 60vw;
-		grid-template-rows: auto;
-		grid-template-areas: "ul" "form";
-	}
-	.contactoNav {
-		margin: 30px 0px 0px 50px;
-		padding: 0px 0px 0px 120px;
-	}
-	.contactoInfo {
-		margin: 30px 0px 0px 150px;
-	}
-}
-@media screen and (min-width: 0px) and (max-width:1535px) {
-	.contactoInfo {
-		margin: 30px 0px 0px 200px;
-	}
-}
 @media screen and (min-width:0px) and (max-width:576px) {
-	.contactoNav {
-		margin: 30px 0px 0px 35px;
-		padding: 5px 0px 0px 40px;
+	main {
+		div{
+			ul{
+				margin: 30px 0px 0px 35px;
+				padding: 5px 0px 0px 40px;
+			}
+		}
 	}
-	.contactoInfo {
-		margin: 30px 0px 0px 95px;
-	}
-	.carousel{
+
+	main{
+        div{
+            form{
+                fieldset {
+                    margin: 30px 0px 0px 95px;
+                }
+            }
+        }
+    }.carousel{
 		margin: 0px;
 	}
 }
