--- a/css/style.css
+++ b/css/style.css
@@ -103,68 +103,6 @@ footer .footerRedes {
   width: 30px;
 }
 
-@media screen and (min-width: 0px) and (max-width: 1535px) {
-  body main form fieldset {
-    margin: 30px 0px 0px 200px;
-  }
-}
-@media screen and (min-width: 0px) and (max-width: 1300px) {
-  body main {
-    justify-items: center;
-  }
-  body main div.contactoDiv {
-    grid-template-columns: 60vw;
-    grid-template-rows: auto;
-    grid-template-areas: "ul" "form";
-  }
-  body main div.contactoDiv ul {
-    margin: 30px 0px 0px 50px;
-    padding: 0px 0px 0px 120px;
-  }
-  body main form fieldset {
-    margin: 30px 0px 0px 150px;
-  }
-}
-@media screen and (min-width: 0px) and (max-width: 822px) {
-  body header {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-  body header nav.row {
-    display: none;
-  }
-  body main section section p {
-    font-size: 30px;
-  }
-  body main section div.carousel {
-    margin: 0px 50px 0px 50px;
-  }
-  body main section h2 {
-    margin-top: 20px;
-    padding: 10px 0px 0px 0px;
-  }
-}
-@media screen and (min-width: 823px) {
-  body header nav.divInicio {
-    display: none;
-  }
-  body header div.navbarLinks {
-    display: none;
-  }
-}
-@media screen and (min-width: 0px) and (max-width: 576px) {
-  body main section div.carousel {
-    margin: 0px;
-  }
-  body main div.contactoDiv ul {
-    margin: 30px 0px 0px 35px;
-    padding: 5px 0px 0px 40px;
-  }
-  body main div.contactoDiv form fieldset {
-    margin: 30px 0px 0px 95px;
-  }
-}
 @keyframes XEROX {
   0% {
     border-radius: 40%;
@@ -389,6 +327,9 @@ a {
   p {
     font-size: 25px;
   }
+  h5 {
+    font-size: 15px;
+  }
 }
 @media screen and (min-width: 823px) {
   body header nav.divInicio {
@@ -401,6 +342,9 @@ a {
 @media screen and (min-width: 0px) and (max-width: 576px) {
   body main section div.carousel {
     margin: 0px;
+  }
+  body main section div.carousel div.carousel-inner div p {
+    font-size: 20px;
   }
   body main div.contactoDiv ul {
     margin: 30px 0px 0px 35px;
