--- a/scss/style.scss
+++ b/scss/style.scss
@@ -267,6 +267,9 @@ a {
 	p{
 		font-size: 25px;
 	}
+	h5{
+		font-size: 15px;
+	}
 }
 @media screen and (min-width:823px) {
 	body{
@@ -286,6 +289,13 @@ a {
 			section{
 				div.carousel{
 					margin: 0px;
+					div.carousel-inner{
+						div{
+							p{
+								font-size: 20px;
+							}
+						}
+					}
 				}
 			}
 			div.contactoDiv{
