--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ footer .footerRedes {
 
 @keyframes XEROX {
   0% {
-    border-radius: 40%;
+    border-radius: 0%;
   }
   25% {
     border-radius: 50%;
@@ -113,8 +113,14 @@ footer .footerRedes {
   40% {
     background-color: rgb(156, 58, 212);
   }
-  95% {
+  65% {
     background-color: rgb(210, 141, 250);
+  }
+  80% {
+    background-color: rgb(97, 23, 146);
+  }
+  90% {
+    background-color: rgb(91, 17, 141);
   }
 }
 * {
@@ -141,7 +147,7 @@ body header h1 {
   text-align: center;
   font-size: 50px;
   font-weight: 550;
-  padding: 20px 0px 0px 0px;
+  padding: 20px 0px 10px 0px;
   font-family: "Ubuntu", sans-serif;
   background-color: rgb(91, 17, 141);
   margin-bottom: 0px;
@@ -238,6 +244,9 @@ body main section h2 {
   margin: 30px 30px 0px 30px;
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+}
+body main section ul.row {
+  padding-left: 0rem;
 }
 body main section ul.row li img {
   height: 300px;
