--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ $background-color_3: rgb(96, 102, 102);
 
 @keyframes XEROX {
 	0% {
-		border-radius: 40%;
+		border-radius: 0%;
 	}
 	25% {
 		border-radius: 50%;
@@ -18,8 +18,14 @@ $background-color_3: rgb(96, 102, 102);
 	40% {
 		background-color: rgb(156, 58, 212);
 	}
-	95% {
+	65% {
 		background-color: rgb(210, 141, 250);
+	}
+	80%{
+		background-color: rgb(97, 23, 146);
+	}
+	90%{
+		background-color: rgb(91, 17, 141);
 	}
 }
 * {
@@ -43,7 +49,7 @@ body {
 			text-align: center;
 			font-size: 50px;
 			font-weight: 550;
-			padding: 20px 0px 0px 0px;
+			padding: 20px 0px 10px 0px;
 			font-family: $font-family_1;
 			background-color: $background-color_1;
 			margin-bottom: 0px;
@@ -151,6 +157,7 @@ body {
 				font-weight: 700;
 			}
 			ul.row{
+				padding-left: 0rem;
 				li{
 					img{
 						height: 300px;
