--- a/scss/style.scss
+++ b/scss/style.scss
@@ -307,6 +307,40 @@ a {
 			}
 			div.contactoDiv{
 				ul{
+					margin: 30px 0px 0px 110px;
+					padding: 5px 0px 0px 40px;
+				}
+				form{
+					fieldset {
+						margin: 30px 0px 0px 115px;
+					}
+				}
+            }
+		}
+	}
+}
+@media screen and (max-width: 450px) {
+	body{
+		main{
+			div.contactoDiv{
+				ul{
+					margin: 30px 0px 0px 55px;
+					padding: 5px 0px 0px 40px;
+				}
+				form{
+					fieldset {
+						margin: 30px 0px 0px 100px;
+					}
+				}
+			}
+		}
+	}
+}
+@media screen and (max-width: 380px) {
+	body{
+		main{
+			div.contactoDiv{
+				ul{
 					margin: 30px 0px 0px 25px;
 					padding: 5px 0px 0px 40px;
 				}
@@ -315,7 +349,7 @@ a {
 						margin: 30px 0px 0px 80px;
 					}
 				}
-            }
+			}
 		}
 	}
 }
