arreglo de links

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import "contacto", "banner", "listasProductos", "footer", "media";
+@import "contacto", "banner", "listasProductos", "footer";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
 $color_1: azure;
